<resources>
    <string name="app_name" translatable="false">DasBild</string>
    <string name="app_slogan" translatable="false">Travel Through Pictures</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_why">
        DasBild is an application made with love for photography and travel.
        taking you on a journey through the world famous regions collecting the best
        pictures taken by a community of talented and passionate photographers.
    </string>
    <string name="app_quote">
        To me, photography is an art of observation.
        It’s about finding something interesting in an ordinary place, I’ve found that it has little to do with
        the things you see and everything to do with the way you see them
    </string>

    <!-- intro page resources-->
    <string name="travel__main_title">Travel</string>
    <string name="travel_title">Travel Through Pictures</string>
    <string name="travel_description">Going through a collection of great albums for the world famous regions</string>

    <string name="discover_main_title">Reach</string>
    <string name="discover_title">All is within reach</string>
    <string name="discover_description">Discover more about the world countries and various regions</string>

    <string name="save__main_title">Save</string>
    <string name="save_title">Save what\'s spacial</string>
    <string name="save_description">Making it easy to save your favourite countries and photos </string>

    <string name="start_title">Get started</string>
    <string name="start_description">Experience what a great picture can tell you about an ordinary place</string>

    <string name="quoted_from">- Elliott Erwitt -</string>
    <string name="founder_first_name">Azzeddine</string>
    <string name="founder_last_name">CHENINE</string>
    <string name="photographer_first_name">Raghed</string>
    <string name="photographer_last_name">Kerroum</string>
    <string name="founder_job">Computer Science Engineering Student</string>
    <string name="photographer_job">Photographer and Electrical Engineering Student</string>
    <string name="photos_by_title">Photos by</string>
    <string name="developed_by_title">Developed by</string>
    <string name="community_title">community</string>
    <string name="community_name">500px</string>

    <!-- messages to display -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="could_not_refresh_text">Couldn\'t refresh,no Internet</string>
    <string name="no_photos">No photos available</string>
    <string name="no_signal">No internet available</string>
    <string name="no_details">No information available</string>
    <string name="no_saved_photos">No saved image found</string>
    <string name="no_more_saved_photos">No more saved image found</string>
    <string name="google_maps_intent_text">show in map</string>
    <string name="google_maps_intent_error">Can not show in map</string>

    <string name="action_settings">Settings</string>
    <string name="region_name">Regions</string>

    <!-- navigation drawer regions name -->
    <string name="arabic">Arab world</string>
    <string name="europe">Europe</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="saved_title">Saved</string>
    <string name="regions_saved_title">Regions and countries</string>
    <string name="photos_saved_title">Photos</string>
    <string name="saved_photos_fragment_title">Saved photos</string>
    <string name="more_section_label">More</string>
    <string name="about_section">About DasBild</string>

    <!-- region keys used in the RestCountries Api call -->
    <string-array name="regions_keys">
        <item>al</item>
        <item>eu</item>
        <item>au</item>
        <item>Asia</item>
        <item>nafta</item>
        <item>usan</item>
    </string-array>

    <!-- region names used in 500px Api call -->
    <string-array name="regions_search_names">
        <item>Arab world</item>
        <item>Europe</item>
        <item>Africa</item>
        <item>Asia</item>
        <item>North America</item>
        <item>South America</item>
    </string-array>

    <!-- albums categories used in 500px Api -->
    <string-array name="albums_categories">
        <item>Landscapes</item>
        <item>Nature</item>
        <item>City and Architecture</item>
        <item>Night</item>
        <item>Street</item>
        <item>Travel</item>
        <item>Transportation</item>
        <item>Black and White</item>
        <item>Fine Art</item>
        <item>Food</item>
    </string-array>


</resources>
