<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        style="@style/Base.TextAppearance.AppCompat.Display2" />
    <FrameLayout
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="280dp"
            android:layout_height="270dp"
            android:scaleType="fitEnd"
            android:src="@mipmap/db_hero"/>
        <LinearLayout
            android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:background="@mipmap/blured_text_background">
            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-medium"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/start_title" />
            <TextView
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/start_description"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>


